# ces

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  REVIEWS.md  build.sh  ces  cesh  cesnet  cesnetbot  config_ces_pubcom_org.toml  production.toml  run  startproxy  startqt  stopproxy  stopqt
cesweb/: .gitignore  CLAUDE.md  package-lock.json  package.json
cesweb/deploy/: README.md  cache-clear.sh  cesweb.service  deploy.sh  nginx-cesweb.conf
cesweb/scripts/: diceweb-client.mjs  diceweb.sh  live.sh
cesweb/src/: cesh.js  cessign.js  engine.js  mime.js  server.js  term.js  url.js
cesweb/tests/: README.md  cessign.test.mjs  engine.test.mjs  fakecesh.mjs  routable.test.mjs  server.test.mjs  term.test.mjs  util.mjs  webcrypto.test.mjs
cmake/: QtDiscovery.cmake
dicedemo/: 01-setup.sh  02-start-server.sh  03-wallet.sh  04-fund.sh  05-play.sh  99-stop-server.sh  README.md  common.sh
docs/: README.md  extensions.md
extensions/: README.md  coalition.lua  coalition.md  dice.lua  dice.md  discovery.lua  discovery.md  peerclusterer.lua  peerclusterer.md  peerfunder.lua  peerfunder.md
include/ces/: account.h  accounts.h  asset.h  assets.h  autoexec.h  buffer.h  cesco.h  cesproxy.h  cesvm.h  cesweb.h  client.h  clientasync.h  extension_manager.h  feemult.h  keys.h  persisted.h  protocol.h  ramfilestore.h  server.h  types.h  webadmin.h
include/ces/cesplex/: endpoint.h  meter.h  mux.h  session.h  wire.h
include/ces/l2/: builtin_site.h  cesplex.h  compute_client.h  compute_handler.h  compute_lua_handler.h  file_client.h  file_handler.h  ledger_txn.h  net_billing.h  net_envelope.h  net_multiplexer.h  peer_handler.h
include/ces/util/: ctrlc.h  fileperm.h  hash.h  helpers.h  hex.h  log.h  metrics.h  resolver.h  vmprogram.h  wallet.h
src/ces/: main.cpp
src/cesbench/: cesbench.cpp
src/cescompmockd/: main.cpp
src/cesh/: dial.cpp  dial.h  main.cpp
src/ceslib/: accounts.cpp  assets.cpp  cesco.cpp  cesplex.cpp  cesvm.cpp  cesweb.cpp  client.cpp  clientasync.cpp  compute_client.cpp  compute_handler.cpp  compute_lua_handler.cpp  ctrlc.cpp  extension_manager.cpp  file_client.cpp  file_handler.cpp  net_billing.cpp  net_envelope.cpp  net_multiplexer.cpp  ramfilestore.cpp  server.cpp  webadmin.cpp
src/ceslib/builtin_apps/: dice.lua  dice.md
src/ceslib/cesplex/: endpoint.cpp  meter.cpp  mux.cpp  session.cpp  wire.cpp
src/ceslib/extensions/: dice.md
src/ceslib/l2/: builtin_site.cpp  compute_client.cpp  compute_handler.cpp  compute_lua_handler.cpp  file_client.cpp  file_handler.cpp  peer_handler.cpp
src/ceslib/util/: helpers.cpp  hex.cpp  resolver.cpp  vmprogram.cpp  wallet.cpp
src/cesluajitd/: api_bucket.inc  api_chan.inc  api_clients.inc  api_conn.inc  api_core.inc  api_extadmin.inc  api_file.inc  api_store.inc  conn_direct.inc  ipc.inc  main.cpp  offload_net.inc  sandbox.inc  sha256.cpp  sha256.h  startup.inc  timers.inc
src/cesproxy/: main.cpp
src/cesqt/: about.h  appmodel.h  console.h  main.cpp  mainwindow_api.inc  rpcserver.cpp  rpcserver.h
tests/: CMakeLists.txt  bench_cesvm.cpp  test_account.cpp  test_asset.cpp  test_async.cpp  test_buffer.cpp  test_bulk.cpp  test_cesh_dial_e2e.cpp  test_cesh_e2e.cpp  test_cesh_file_e2e.cpp  test_cesplex.cpp  test_cesproxy.cpp  test_cesqt_api.cpp  test_cesvm.cpp  test_cesweb.cpp  test_channel_meter.cpp  test_common.h  test_compute.cpp  test_compute_lua.cpp  test_compute_remote.cpp  test_dice_e2e.cpp  test_dice_lua.cpp  test_discovery.cpp  test_e2e_common.h  test_echo_handler.h  test_ext_common.h  test_getinfo.cpp  test_gossip.cpp  test_hex.cpp  test_kvfile.cpp  test_l2_edges.cpp  test_lua_conn.cpp  test_lua_conn_common.h  test_luarpc.cpp  test_main.cpp  test_metrics.cpp  test_multiserver.cpp  test_networkbilling.cpp  test_payment.cpp  test_peerclusterer.cpp  (+13 more)
tools/: backup.sh  cesnet.mjs  cesnetbot.mjs  extnet.mjs
